<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextUpdateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UpSvc1" />

    <EditText
        android:id="@+id/editTextUpdateRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UpSvc2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_cancel_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UpSvc3" />

        <Button
            android:id="@+id/button_delete__service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UpSvc4" />

        <Button
            android:id="@+id/button_remove_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UpSvc5" />

    </LinearLayout>


</LinearLayout>